<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/password_gradiant"
    android:layout_height="match_parent"
    android:padding="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv1"
            android:text="@string/otp_is_sent_on_your_registered_nmobile_number"
            android:textColor="@color/White"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/counter"
            android:text=""
            android:textColor="@color/White"
            android:textAlignment="center"
            android:layout_marginTop="80dp"
            android:textSize="18sp"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp"
        android:textColor="@color/White"
        android:textColorHint="@color/forgetpassword_hint_color"
        android:maxLength="4"
        android:inputType="number"
        android:ems="4"
        android:id="@+id/OTP"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white"
        android:clickable="true"
        android:layout_marginTop="80dp"
        android:id="@+id/Submit"
        android:text="@string/confirm"
        android:onClick="confirm"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/forget_password_background"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:id="@+id/resend"
        android:text="@string/resend_otp"
        android:visibility="gone"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:onClick="resend"
        android:textAllCaps="false"
        android:textColor="@color/forget_password_background"
        />

</LinearLayout>