<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingRight="18dp"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="18dp"
    android:background="@drawable/red"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:id="@+id/logo"
        android:src="@drawable/ic_new"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:contentDescription="@drawable/ic_new" />
    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linear_layout1"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="25dp"
        android:id="@+id/relative_layout_1"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:id="@+id/inputlayout1"
            android:textColorHint="@color/hint_color"
            android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_registration_number"
            android:maxLength="9"
            android:textColorHint="@color/hint_color"
            android:inputType="text"
            android:ems="9"
            android:textColor="@color/White"
            android:id="@+id/login_roll_no"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:padding="10dp"
            tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/White"
            android:id="@+id/view1"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/inputlayout2"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_color"
            android:layout_height="wrap_content">

        <EditText
            android:layout_below="@+id/view1"
            android:textSize="@dimen/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:maxLength="40"
            android:textColorHint="@color/hint_color"
            android:inputType="textPassword"
            android:textColor="@color/White"
            android:id="@+id/login_password"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/White"
            />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/linear_layout1"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white"
            android:clickable="true"
            android:id="@+id/login_button"
            android:text="@string/sign_in"
            android:onClick="logIn"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/login_background"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_register"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="@color/White"
            android:id="@+id/notregistertext"
            android:textStyle="bold"
            />
        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white"
            android:clickable="true"
            android:id="@+id/sign_up_button"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:onClick="signUp"
            android:textAllCaps="false"
            android:textColor="@color/login_background"
            />

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:clickable="true"
            android:onClick="forgetPassword"
            android:textColor="@color/White"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:id="@+id/forget_passsword"
            android:textStyle="bold"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/v_1_0"
        android:textStyle="bold"
        android:textColor="@color/vergion_color"
        android:gravity="center"
        android:id="@+id/version"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>



