<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/password_gradiant"
    android:orientation="vertical"
    android:padding="20dp"
    android:baselineAligned="false">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:id="@+id/relative_layout_11"
    android:orientation="vertical">
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/enter_your_registered_mobile_number_and_registration_number"
        android:textAlignment="center"
        android:typeface="normal"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:clickable="false"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"/>
    </RelativeLayout>

    <LinearLayout
        android:padding="10dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contact"
        android:textColor="@color/White"
        android:textColorHint="@color/forgetpassword_hint_color"
        android:maxLength="10"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/forget_password_contact_no"
        android:background="@android:color/transparent"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        tools:ignore="RtlHardcoded,TextFields" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_registration_number"
        android:textColor="@color/White"
        android:textColorHint="@color/forgetpassword_hint_color"
        android:maxLength="9"
        android:inputType="text"
        android:ems="9"
        android:id="@+id/forget_password_roll_no"
        android:background="@android:color/transparent"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_subtitles_black_24dp"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        tools:ignore="RtlHardcoded,TextFields" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white"
        android:clickable="true"
        android:layout_marginTop="100dp"
        android:id="@+id/Submit"
        android:text="@string/confirm"
        android:onClick="confirm"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/forget_password_background"
        />

    </LinearLayout>

</RelativeLayout>