<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password_updatation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/password_gradiant"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="placementproject.studentapp.ForgetPasswordUpdatation">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
    <TextView
        android:paddingLeft="10dp"
        android:clickable="false"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_password"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:textSize="15sp"
        />
</RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:textColor="@color/White"
        android:textColorHint="@color/hint_color"
        android:maxLines="2"
        android:inputType="text"
        android:id="@+id/forget_new_password"
        android:background="@android:color/transparent"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        tools:ignore="RtlHardcoded" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/White"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white"
        android:clickable="true"
        android:layout_marginTop="70dp"
        android:id="@+id/update"
        android:text="@string/update"
        android:onClick="update"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:textColor="@color/forget_password_background"
        />
</LinearLayout>
