<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingRight="18dp"
    android:focusableInTouchMode="true"
    android:paddingLeft="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/login_background"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rela1"
        android:layout_marginBottom="10dp"
        >
        <View
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:layout_width="match_parent"
            android:background="@color/White"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="1dp"/>
        <TextView
            android:paddingLeft="10dp"
            android:clickable="false"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:background="@color/login_background"
            android:layout_centerHorizontal="true"
            android:textColor="@color/White"
            android:textSize="15sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white1"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/login_background"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_color"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_person_black_24dp1"
            android:padding="5dp"
            android:layout_marginTop="10dp"

            android:inputType="text|textPersonName"
            android:hint="@string/hint_name"
            android:id="@+id/name"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_btn_bg_color"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_registration_number"
            android:textColor="@color/login_background"
            android:textColorHint="@color/hint_color"
            android:maxLines="1"
            android:maxLength="9"
            android:inputType="text"
            android:ems="9"
            android:id="@+id/roll_no"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_subtitles_black_24dp1"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_btn_bg_color"
            />


        <EditText
            android:textColor="@color/login_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:id="@+id/sign_up_email"
            android:textColorHint="@color/hint_color"
            android:maxLines="2"
            android:inputType="textEmailAddress"
            android:ems="20"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_btn_bg_color"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact"
            android:textColor="@color/login_background"
            android:textColorHint="@color/hint_color"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/mobile_no"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_call_black_24dp1"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded" />
        <View
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_btn_bg_color"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/hint_create_password"
            android:textColor="@color/red1"
            android:textColorHint="@color/hint_color"
            android:maxLines="2"
            android:textStyle="normal"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signup_password"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableTint="@color/login_background"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp1"
            android:padding="5dp"

            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded,TextFields"
            tools:targetApi="m" />
        <View
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_btn_bg_color"
            />

        <Button
            android:padding="10dp"
            android:ems="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red1"
            android:clickable="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/login_button"
            android:text="@string/sign_in"
            android:onClick="submit"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/White"
            />
    </LinearLayout>

</RelativeLayout>